--- a/references.bib
+++ b/references.bib
@@ -185,7 +185,7 @@
 @article{duchi2011adaptive,
   title={Adaptive subgradient methods for online learning and stochastic optimization},
   author={Duchi, John and Hazan, Elad and Singer, Yoram},
-  journal={Journal of machine learning research},
+  journal={Journal of Machine Learning Research},
   volume={12},
   number={7},
   year={2011}
@@ -976,3 +976,392 @@
   booktitle={International Conference on Learning Representations},
   year={2021}
 }
+
+@article{shalev2012online,
+  title={Online learning and online convex optimization},
+  author={Shalev-Shwartz, Shai and others},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={4},
+  number={2},
+  pages={107--194},
+  year={2012},
+  publisher={Now Publishers, Inc.}
+}
+
+@article{bubeck2012regret,
+  title={Regret analysis of stochastic and nonstochastic multi-armed bandit problems},
+  author={Bubeck, S{\'e}bastien and Cesa-Bianchi, Nicolo and others},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={5},
+  number={1},
+  pages={1--122},
+  year={2012},
+  publisher={Now Publishers, Inc.}
+}
+
+@book{sutton2018reinforcement,
+  title={Reinforcement learning: An introduction},
+  author={Sutton, Richard S and Barto, Andrew G},
+  year={2018},
+  publisher={MIT press}
+}
+
+@article{slivkins2019introduction,
+  title={Introduction to multi-armed bandits},
+  author={Slivkins, Aleksandrs and others},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={12},
+  number={1-2},
+  pages={1--286},
+  year={2019},
+  publisher={Now Publishers, Inc.}
+}
+
+@inproceedings{flaxman2005online,
+  title={Online convex optimization in the bandit setting: gradient descent without a gradient},
+  author={Flaxman, Abraham D and Kalai, Adam Tauman and McMahan, H Brendan},
+  booktitle={Proceedings of the Sixteenth Annual ACM-SIAM Symposium on Discrete Algorithms},
+  pages={385--394},
+  year={2005}
+}
+
+@inproceedings{agarwal2010optimal,
+  title={Optimal Algorithms for Online Convex Optimization with Multi-Point Bandit Feedback.},
+  author={Agarwal, Alekh and Dekel, Ofer},
+  booktitle={COLT},
+  pages={28--40},
+  year={2010},
+  organization={Citeseer}
+}
+
+@inproceedings{saha2011improved,
+  title={Improved regret guarantees for online smooth convex optimization with bandit feedback},
+  author={Saha, Ankan and Tewari, Ambuj},
+  booktitle={Proceedings of the Fourteenth International Conference on Artificial Intelligence and Statistics},
+  pages={636--642},
+  year={2011},
+  organization={JMLR Workshop and Conference Proceedings}
+}
+
+@article{shamir2017optimal,
+  title={An Optimal Algorithm for Bandit and Zero-Order Convex Optimization with Two-Point Feedback},
+  author={Shamir, Ohad},
+  journal={Journal of Machine Learning Research},
+  volume={18},
+  number={52},
+  pages={1--11},
+  year={2017}
+}
+
+@inproceedings{zinkevich2003online,
+  title={Online convex programming and generalized infinitesimal gradient ascent},
+  author={Zinkevich, Martin},
+  booktitle={Proceedings of the 20th International Conference on Machine Learning},
+  pages={928--936},
+  year={2003}
+}
+
+@inproceedings{abernethy2009beating,
+  title={Beating the adaptive bandit with high probability},
+  author={Abernethy, Jacob and Rakhlin, Alexander},
+  booktitle={2009 Information Theory and Applications Workshop},
+  pages={280--289},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{abernethy2008competing,
+  title={Competing in the dark: An efficient algorithm for bandit linear optimization},
+  author={Abernethy, Jacob and Hazan, Elad and Rakhlin, Alexander},
+  booktitle={21st Annual Conference on Learning Theory, COLT 2008},
+  year={2008}
+}
+
+@book{boyd2004convex,
+  title={Convex optimization},
+  author={Boyd, Stephen P and Vandenberghe, Lieven},
+  year={2004},
+  publisher={Cambridge university press}
+}
+
+@article{bravo2018bandit,
+  title={Bandit learning in concave N-person games},
+  author={Bravo, Mario and Leslie, David and Mertikopoulos, Panayotis},
+  journal={Advances in Neural Information Processing Systems},
+  volume={31},
+  year={2018}
+}
+
+@article{chen2023symbolic,
+  title={Symbolic discovery of optimization algorithms},
+  author={Chen, Xiangning and Liang, Chen and Huang, Da and Real, Esteban and Wang, Kaiyuan and Liu, Yao and Pham, Hieu and Dong, Xuanyi and Luong, Thang and Hsieh, Cho-Jui and others},
+  journal={arXiv preprint arXiv:2302.06675},
+  year={2023}
+}
+
+@software{black2021gpt,
+  author={Black, Sid and Gao, Leo and Wang, Phil and Leahy, Connor and Biderman, Stella},
+  title={{GPT-Neo: Large Scale Autoregressive Language Modeling with Mesh-Tensorflow}},
+  month={mar},
+  year={2021},
+  note={{If you use this software, please cite it using these metadata.}},
+  publisher={Zenodo},
+  version={1.0},
+  doi={10.5281/zenodo.5297715},
+  url={https://doi.org/10.5281/zenodo.5297715}
+}
+
+@article{gao2020pile,
+  title={The Pile: An 800GB Dataset of Diverse Text for Language Modeling},
+  author={Gao, Leo and Biderman, Stella and Black, Sid and Golding, Laurence and Hoppe, Travis and Foster, Charles and Phang, Jason and He, Horace and Thite, Anish and Nabeshima, Noa and others},
+  journal={arXiv preprint arXiv:2101.00027},
+  year={2020}
+}
+
+@article{jiang2022does,
+  title={How Does Adaptive Optimization Impact Local Neural Network Geometry?},
+  author={Jiang, Kaiqi and Malik, Dhruv and Li, Yuanzhi},
+  journal={arXiv preprint arXiv:2211.02254},
+  year={2022}
+}
+
+@article{gorbunov2022clipped,
+  title={Clipped stochastic methods for variational inequalities with heavy-tailed noise},
+  author={Gorbunov, Eduard and Danilova, Marina and Dobre, David and Dvurechenskii, Pavel and Gasnikov, Alexander and Gidel, Gauthier},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={31319--31332},
+  year={2022}
+}
+
+@article{wright2015coordinate,
+  title={Coordinate descent algorithms},
+  author={Wright, Stephen J},
+  journal={Mathematical programming},
+  volume={151},
+  number={1},
+  pages={3--34},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{shi2016primer,
+  title={A primer on coordinate descent algorithms},
+  author={Shi, Hao-Jun Michael and Tu, Shenyinying and Xu, Yangyang and Yin, Wotao},
+  journal={arXiv preprint arXiv:1610.00040},
+  year={2016}
+}
+
+@inproceedings{mangold2023high,
+  title={High-Dimensional Private Empirical Risk Minimization by Greedy Coordinate Descent},
+  author={Mangold, Paul and Bellet, Aur{\'e}lien and Salmon, Joseph and Tommasi, Marc},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  pages={4894--4916},
+  year={2023},
+  organization={PMLR}
+}
+
+@article{pasande2022stochastic,
+  title={Stochastic First-Order Learning for Large-Scale Flexibly Tied Gaussian Mixture Model},
+  author={Pasande, Mohammad and Hosseini, Reshad and Araabi, Babak Nadjar},
+  journal={arXiv preprint arXiv:2212.05402},
+  year={2022}
+}
+
+@inproceedings{mangold2022differentially,
+  title={Differentially private coordinate descent for composite empirical risk minimization},
+  author={Mangold, Paul and Bellet, Aur{\'e}lien and Salmon, Joseph and Tommasi, Marc},
+  booktitle={International Conference on Machine Learning},
+  pages={14948--14978},
+  year={2022},
+  organization={PMLR}
+}
+
+@inproceedings{pascanu2013difficulty,
+  title={On the difficulty of training recurrent neural networks},
+  author={Pascanu, Razvan and Mikolov, Tomas and Bengio, Yoshua},
+  booktitle={International Conference on Machine Learning},
+  pages={1310--1318},
+  year={2013},
+  organization={PMLR}
+}
+
+@article{pichapati2019adaclip,
+  title={AdaCliP: Adaptive clipping for private SGD},
+  author={Pichapati, Venkatadheeraj and Suresh, Ananda Theertha and Yu, Felix X and Reddi, Sashank J and Kumar, Sanjiv},
+  journal={arXiv preprint arXiv:1908.07643},
+  year={2019}
+}
+
+@article{kocetkov2022stack,
+  title={The Stack: 3 TB of permissively licensed source code},
+  author={Kocetkov, Denis and Li, Raymond and Allal, Loubna Ben and Li, Jia and Mou, Chenghao and Ferrandis, Carlos Mu{\~n}oz and Jernite, Yacine and Mitchell, Margaret and Hughes, Sean and Wolf, Thomas and others},
+  journal={arXiv preprint arXiv:2211.15533},
+  year={2022}
+}
+
+@inproceedings{he2016deep,
+  title={Deep residual learning for image recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={770--778},
+  year={2016}
+}
+
+@article{krizhevsky2009learning,
+  title={Learning Multiple Layers of Features from Tiny Images},
+  author={Krizhevsky, Alex},
+  year={2009}
+}
+
+@article{dimitrov2023plane,
+  title={PlanE: Representation Learning over Planar Graphs},
+  author={Dimitrov, Radoslav and Zhao, Zeyang and Abboud, Ralph and Ceylan, {\.I}smail {\.I}lkan},
+  journal={arXiv preprint arXiv:2307.01180},
+  year={2023}
+}
+
+@inproceedings{walters2021trajectory,
+  title={Trajectory Prediction using Equivariant Continuous Convolution},
+  author={Walters, Robin and Li, Jinxi Leo and Yu, Rose},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2021}
+}
+
+@article{gabillon2011multi,
+  title={Multi-bandit best arm identification},
+  author={Gabillon, Victor and Ghavamzadeh, Mohammad and Lazaric, Alessandro and Bubeck, S{\'e}bastien},
+  journal={Advances in Neural Information Processing Systems},
+  volume={24},
+  year={2011}
+}
+
+@inproceedings{wang2023efficient,
+  author={Wang, Xue and Wei, Mike Mingcheng and Yao, Tao},
+  title={Efficient Sparse Linear Bandits under High Dimensional Data},
+  year={2023},
+  url={https://doi.org/10.1145/3580305.3599329},
+  doi={10.1145/3580305.3599329},
+  booktitle={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  pages={2431–2443},
+  numpages={13},
+}
+
+@inproceedings{audibert2010best,
+  title={Best arm identification in multi-armed bandits.},
+  author={Audibert, Jean-Yves and Bubeck, S{\'e}bastien and Munos, R{\'e}mi},
+  booktitle={COLT},
+  pages={41--53},
+  year={2010}
+}
+
+@inproceedings{abbasi2012online,
+  title={Online-to-confidence-set conversions and application to sparse stochastic bandits},
+  author={Abbasi-Yadkori, Yasin and Pal, David and Szepesvari, Csaba},
+  booktitle={Artificial Intelligence and Statistics},
+  pages={1--9},
+  year={2012},
+  organization={PMLR}
+}
+
+@inproceedings{oh2021sparsity,
+  title={Sparsity-agnostic lasso bandit},
+  author={Oh, Min-hwan and Iyengar, Garud and Zeevi, Assaf},
+  booktitle={International Conference on Machine Learning},
+  pages={8271--8280},
+  year={2021},
+  organization={PMLR}
+}
+
+@article{kim2019doubly,
+  title={Doubly-robust lasso bandit},
+  author={Kim, Gi-Soo and Paik, Myunghee Cho},
+  journal={Advances in Neural Information Processing Systems},
+  volume={32},
+  year={2019}
+}
+
+@inproceedings{yang2016sparse,
+  title={Sparse nonlinear regression: Parameter estimation under nonconvexity},
+  author={Yang, Zhuoran and Wang, Zhaoran and Liu, Han and Eldar, Yonina and Zhang, Tong},
+  booktitle={International Conference on Machine Learning},
+  pages={2472--2481},
+  year={2016},
+  organization={PMLR}
+}
+
+@inproceedings{lu2019multi,
+  title={Multi-objective generalized linear bandits},
+  author={Lu, Shiyin and Wang, Guanghui and Hu, Yao and Zhang, Lijun},
+  booktitle={Proceedings of the 28th International Joint Conference on Artificial Intelligence},
+  pages={3080--3086},
+  year={2019}
+}
+
+@inproceedings{chu2011contextual,
+  title={Contextual bandits with linear payoff functions},
+  author={Chu, Wei and Li, Lihong and Reyzin, Lev and Schapire, Robert},
+  booktitle={Proceedings of the Fourteenth International Conference on Artificial Intelligence and Statistics},
+  pages={208--214},
+  year={2011},
+  organization={JMLR Workshop and Conference Proceedings}
+}
+
+@article{dong2022decomposable,
+  title={Decomposable Non-Smooth Convex Optimization with Nearly-Linear Gradient Oracle Complexity},
+  author={Dong, Sally and Jiang, Haotian and Lee, Yin Tat and Padmanabhan, Swati and Ye, Guanghao},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={30756--30769},
+  year={2022}
+}
+
+@article{schmidt2017minimizing,
+  title={Minimizing finite sums with the stochastic average gradient},
+  author={Schmidt, Mark and Le Roux, Nicolas and Bach, Francis},
+  journal={Mathematical Programming},
+  volume={162},
+  pages={83--112},
+  year={2017},
+  publisher={Springer}
+}
+
+@inproceedings{joachims2006training,
+  title={Training linear SVMs in linear time},
+  author={Joachims, Thorsten},
+  booktitle={Proceedings of the 12th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={217--226},
+  year={2006}
+}
+
+@article{recht2011hogwild,
+  title={Hogwild!: A lock-free approach to parallelizing stochastic gradient descent},
+  author={Recht, Benjamin and Re, Christopher and Wright, Stephen and Niu, Feng},
+  journal={Advances in neural information processing systems},
+  volume={24},
+  year={2011}
+}
+
+@inproceedings{li2010contextual,
+  title={A contextual-bandit approach to personalized news article recommendation},
+  author={Li, Lihong and Chu, Wei and Langford, John and Schapire, Robert E},
+  booktitle={Proceedings of the 19th international conference on World wide web},
+  pages={661--670},
+  year={2010}
+}
+
+@article{abbasi2011improved,
+  title={Improved algorithms for linear stochastic bandits},
+  author={Abbasi-Yadkori, Yasin and P{\'a}l, D{\'a}vid and Szepesv{\'a}ri, Csaba},
+  journal={Advances in neural information processing systems},
+  volume={24},
+  year={2011}
+}
+
+@article{brooks2024video,
+  title={Video generation models as world simulators},
+  author={Tim Brooks and Bill Peebles and Connor Holmes and Will DePue and Yufei Guo and Li Jing and David Schnurr and Joe Taylor and Troy Luhman and Eric Luhman and Clarence Ng and Ricky Wang and Aditya Ramesh},
+  year={2024},
+  url={https://openai.com/research/video-generation-models-as-world-simulators},
+}
+
