--- a/references.bib
+++ b/references.bib
@@ -1365,3 +1365,216 @@
   url={https://openai.com/research/video-generation-models-as-world-simulators},
 }
 
+@article{lu2018learning,
+  title={Learning under concept drift: A review},
+  author={Lu, Jie and Liu, Anjin and Dong, Fan and Gu, Feng and Gama, Joao and Zhang, Guangquan},
+  journal={IEEE transactions on knowledge and data engineering},
+  volume={31},
+  number={12},
+  pages={2346--2363},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{vzliobaite2016overview,
+  title={An overview of concept drift applications},
+  author={{\v{Z}}liobait{\.e}, Indr{\.e} and Pechenizkiy, Mykola and Gama, Joao},
+  journal={Big data analysis: new algorithms for a new society},
+  pages={91--114},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{gama2014survey,
+  title={A survey on concept drift adaptation},
+  author={Gama, Jo{\~a}o and {\v{Z}}liobait{\.e}, Indr{\.e} and Bifet, Albert and Pechenizkiy, Mykola and Bouchachia, Abdelhamid},
+  journal={ACM computing surveys (CSUR)},
+  volume={46},
+  number={4},
+  pages={1--37},
+  year={2014},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{bach2008paired,
+  title={Paired learners for concept drift},
+  author={Bach, Stephen H and Maloof, Marcus A},
+  booktitle={2008 Eighth IEEE International Conference on Data Mining},
+  pages={23--32},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{li2022ddg,
+  title={{DDG-DA}: Data distribution generation for predictable concept drift adaptation},
+  author={Li, Wendi and Yang, Xiao and Liu, Weiqing and Xia, Yingce and Bian, Jiang},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={36},
+  number={4},
+  pages={4092--4100},
+  year={2022}
+}
+
+@inproceedings{riva2022addressing,
+  title={Addressing non-stationarity in {FX} trading with online model selection of offline {RL} experts},
+  author={Riva, Antonio and Bisi, Lorenzo and Liotet, Pierre and Sabbioni, Luca and Vittori, Edoardo and Pinciroli, Marco and Trapletti, Michele and Restelli, Marcello},
+  booktitle={Proceedings of the Third ACM International Conference on AI in Finance},
+  pages={394--402},
+  year={2022}
+}
+
+@inproceedings{ye2022future,
+  title={Future gradient descent for adapting the temporal shifting data distribution in online recommendation systems},
+  author={Ye, Mao and Jiang, Ruichen and Wang, Haoxiang and Choudhary, Dhruv and Du, Xiaocong and Bhushanam, Bhargav and Mokhtari, Aryan and Kejariwal, Arun and Liu, Qiang},
+  booktitle={Uncertainty in Artificial Intelligence},
+  pages={2256--2266},
+  year={2022},
+  organization={PMLR}
+}
+
+@inproceedings{bifet2007learning,
+  title={Learning from time-changing data with adaptive windowing},
+  author={Bifet, Albert and Gavalda, Ricard},
+  booktitle={Proceedings of the 2007 SIAM International Conference on Data Mining},
+  pages={443--448},
+  year={2007},
+  organization={SIAM}
+}
+
+@article{gomes2017adaptive,
+  title={Adaptive random forests for evolving data stream classification},
+  author={Gomes, Heitor M and Bifet, Albert and Read, Jesse and Barddal, Jean Paul and Enembreck, Fabr{\'\i}cio and Pfharinger, Bernhard and Holmes, Geoff and Abdessalem, Talel},
+  journal={Machine Learning},
+  volume={106},
+  pages={1469--1495},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{kolter2007dynamic,
+  title={Dynamic weighted majority: An ensemble method for drifting concepts},
+  author={Kolter, J Zico and Maloof, Marcus A},
+  journal={The Journal of Machine Learning Research},
+  volume={8},
+  pages={2755--2790},
+  year={2007},
+  publisher={JMLR. org}
+}
+
+@article{elwell2011incremental,
+  title={Incremental learning of concept drift in nonstationary environments},
+  author={Elwell, Ryan and Polikar, Robi},
+  journal={IEEE transactions on neural networks},
+  volume={22},
+  number={10},
+  pages={1517--1531},
+  year={2011},
+  publisher={IEEE}
+}
+
+@article{brzezinski2013reacting,
+  title={Reacting to different types of concept drift: The accuracy updated ensemble algorithm},
+  author={Brzezinski, Dariusz and Stefanowski, Jerzy},
+  journal={IEEE transactions on neural networks and learning systems},
+  volume={25},
+  number={1},
+  pages={81--94},
+  year={2013},
+  publisher={IEEE}
+}
+
+@inproceedings{zhang2008categorizing,
+  title={Categorizing and mining concept drifting data streams},
+  author={Zhang, Peng and Zhu, Xingquan and Shi, Yong},
+  booktitle={Proceedings of the 14th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages={812--820},
+  year={2008}
+}
+
+@inproceedings{domingos2000mining,
+  title={Mining high-speed data streams},
+  author={Domingos, Pedro and Hulten, Geoff},
+  booktitle={Proceedings of the sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages={71--80},
+  year={2000}
+}
+
+@inproceedings{hulten2001mining,
+  title={Mining time-changing data streams},
+  author={Hulten, Geoff and Spencer, Laurie and Domingos, Pedro},
+  booktitle={Proceedings of the seventh ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages={97--106},
+  year={2001}
+}
+
+@inproceedings{gama2003accurate,
+  title={Accurate decision trees for mining high-speed data streams},
+  author={Gama, Joao and Rocha, Ricardo and Medas, Pedro},
+  booktitle={Proceedings of the ninth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages={523--528},
+  year={2003}
+}
+
+@article{frias2016online,
+  title={Online adaptive decision trees based on concentration inequalities},
+  author={Frias-Blanco, Isvani and del Campo-Avila, Jose and Ramos-Jimenez, Gonzalo and Carvalho, Andre CPLF and Ortiz-D{\'\i}az, Agust{\'\i}n and Morales-Bueno, Rafael},
+  journal={Knowledge-Based Systems},
+  volume={104},
+  pages={179--194},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{rutkowski2013decision,
+  title={Decision trees for mining data streams based on the gaussian approximation},
+  author={Rutkowski, Leszek and Jaworski, Maciej and Pietruczuk, Lena and Duda, Piotr},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  volume={26},
+  number={1},
+  pages={108--119},
+  year={2013},
+  publisher={IEEE}
+}
+
+@article{rutkowski2012decision,
+  title={Decision trees for mining data streams based on the McDiarmid's bound},
+  author={Rutkowski, Leszek and Pietruczuk, Lena and Duda, Piotr and Jaworski, Maciej},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  volume={25},
+  number={6},
+  pages={1272--1279},
+  year={2012},
+  publisher={IEEE}
+}
+
+@article{ernst2005tree,
+  title={Tree-based batch mode reinforcement learning},
+  author={Ernst, Damien and Geurts, Pierre and Wehenkel, Louis},
+  journal={Journal of Machine Learning Research},
+  volume={6},
+  year={2005},
+  publisher={Microtome Publishing, Brookline, United States-Massachusetts}
+}
+
+@article{wei2016tracking,
+  title={Tracking the best expert in non-stationary stochastic environments},
+  author={Wei, Chen-Yu and Hong, Yi-Te and Lu, Chi-Jen},
+  journal={Advances in neural information processing systems},
+  volume={29},
+  year={2016}
+}
+
+@book{bosq2000linear,
+  title={Linear processes in function spaces: Theory and applications},
+  author={Bosq, Denis},
+  volume={149},
+  year={2000},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{wang2020practical,
+  title={A practical incremental method to train deep {CTR} models},
+  author={Wang, Yichao and Guo, Huifeng and Tang, Ruiming and Liu, Zhirong and He, Xiuqiang},
+  journal={arXiv preprint arXiv:2009.02147},
+  year={2020}
+}
