Update sty and bib

--- a/panyan.sty
+++ b/panyan.sty
@@ -380,3 +380,5 @@
 \newcommand{\problem}[1]{\clearpage\section*{Problem #1}}
 \WithSuffix\newcommand{\problem}*[1]{\section*{Problem #1}}
 
+\newcommand{\tbd}[1]{\text{\color{red}[#1]}}
+\WithSuffix\newcommand{\tbd}*{{\color{red}[\dots]}}
