--- a/references.bib
+++ b/references.bib
@@ -1578,3 +1578,46 @@
   journal={arXiv preprint arXiv:2009.02147},
   year={2020}
 }
+
+@inproceedings{soare2014multi,
+  title={Multi-task linear bandits},
+  author={Soare, Marta and Alsharif, Ouais and Lazaric, Alessandro and Pineau, Joelle},
+  booktitle={NIPS2014 workshop on transfer and multi-task learning: theory meets practice},
+  year={2014}
+}
+
+@inproceedings{dimakopoulou2019balanced,
+  title={Balanced linear contextual bandits},
+  author={Dimakopoulou, Maria and Zhou, Zhengyuan and Athey, Susan and Imbens, Guido},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={33},
+  number={01},
+  pages={3445--3453},
+  year={2019}
+}
+
+@article{kannan2018smoothed,
+  title={A smoothed analysis of the greedy algorithm for the linear contextual bandit problem},
+  author={Kannan, Sampath and Morgenstern, Jamie H and Roth, Aaron and Waggoner, Bo and Wu, Zhiwei Steven},
+  journal={Advances in neural information processing systems},
+  volume={31},
+  year={2018}
+}
+
+@article{auer2002using,
+  title={Using confidence bounds for exploitation-exploration trade-offs},
+  author={Auer, Peter},
+  journal={Journal of Machine Learning Research},
+  volume={3},
+  number={Nov},
+  pages={397--422},
+  year={2002}
+}
+
+@article{dimakopoulou2017estimation,
+  title={Estimation considerations in contextual bandits},
+  author={Dimakopoulou, Maria and Zhou, Zhengyuan and Athey, Susan and Imbens, Guido},
+  journal={arXiv preprint arXiv:1711.07077},
+  year={2017}
+}
+
